Add MessageUtil and use Language.deliver